# desafio-tecnico_Sicredi

./: .gitignore  README.md  conftest.py  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  databricks.yml
config/: config.yaml
docs/: como-rodar.md
docs/diagramas/: arquitetura.drawio
notebooks/: 00_setup_e_massa.py  01_bronze.py  01_pipeline_databricks.py  02_analytics_sql.py  02_prata.py  03_ouro.py  04_analytics_sql.py
sql/analytics/: 01_registro_vigente.sql  01_registro_vigente_row_number.sql  02_comparativo_mensal_lag_lead.sql  03_primeiro_ultimo_comportamento.sql  04_segmentacao_ntile_percentrank.sql  04_segmentacao_percentual.sql  05_anomalias_transacionais.sql  06_cliente_historico_e_cidade_segmento.sql  06_cliente_vs_historico_e_cidade_segmento.sql  07_merge.sql  07_merge_incremental.sql
sql/ddl/: 00_catalogo_schemas.sql
src/: config.py
src/common/: ambiente.py  logging_config.py  metadados.py  spark.py
src/ingestao/: bronze.py  gerador_dados.py
src/jobs/: _base.py  analytics_job.py  bronze_job.py  gerar_dados_job.py  ouro_job.py  pipeline.py  prata_job.py
src/novarota/: __init__.py  config.py
src/novarota/common/: ambiente.py  logging_config.py  metadados.py  spark.py
src/novarota/ingestao/: bronze.py  gerador_dados.py
src/novarota/jobs/: _base.py  analytics_job.py  bronze_job.py  gerar_dados_job.py  ouro_job.py  pipeline.py  (+1 more)
src/qualidade/: regras.py
src/transformacao/: ouro.py  prata.py  scd2.py
tests/: conftest.py  test_config.py  test_metadados.py  test_ouro.py  test_qualidade.py  test_scd2.py
(+2 files in other folders)
